--- a/style.css
+++ b/style.css
@@ -12,7 +12,12 @@ body {
     width: 960px;
     height: 540px;
     background-color: gray;
-   
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 #fg {
     position: absolute;
